<resources>
    <string name="app_name">IflixTask</string>
    <string name="resume_text">Resume</string>
    <string name="pause_text">Pause</string>
    <string name="reset_text">Reset</string>
    <string name="start_text">Start</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="elapse_time_zero">0s</string>
    <string name="title_elapse_time">Elapsed Time : </string>
    <string name="calculate_pi">Calculate Pi</string>
    <string name="pi_default_result">0</string>
</resources>
